--- a/index.html
+++ b/index.html
@@ -18,48 +18,48 @@
         <h2>Productos</h2>
         <div class="contenedor-productos">
             <div class="producto">
-                <img src="/fondo-productos/producto1.jpg" alt="Producto1">
-                <p>Bapesta Sta</p>
+                <img src="../fondo-productos/bapesta.jpg" alt="Producto 1">
+                <p>Bapesta-Sta</p>
             </div>
             <div class="producto">
-                <img src="/fondo-productos/producto2.jpg" alt="Producto2">
-                <p>Bape Shark</p>
+                <img src="../fondo-productos/bape-shark.jpg" alt="Producto 2">
+                <p>Bape-Shark</p>
             </div>
             <div class="producto">
-                <img src="/fondo-productos/producto3.jpg" alt="Producto3">
-                <p>Nike Tech</p>
+                <img src="../fondo-productos/bapeS.jpg" alt="Producto 3">
+                <p>Bape-Shark</p>
             </div>
             <div class="producto">
-                <img src="/fondo-productos/producto4.jpg" alt="Producto4">
-                <p>Tech Polo</p>
+                <img src="../fondo-productos/hoddies-shark.jpg" alt="Producto 4">
+                <p>Bape-Shark</p>
             </div>
             <div class="producto">
-                <img src="/fondo-productos/producto5.jpg" alt="Producto5">
+                <img src="../fondo-productos/hoddie-tech.jpg" alt="Producto 5">
+                <p>Hoddie-Tech</p>
+            </div>
+            <div class="producto">
+                <img src="../fondo-productos/camisa.corteiz.jpg" alt="Producto 6">
                 <p>Corteiz</p>
             </div>
             <div class="producto">
-                <img src="/fondo-productos/producto6.jpg" alt="Producto6">
-                <p>Bape Shark</p>
-            </div>
-            <div class="producto">
-                <img src="/fondo-productos/producto7.jpg" alt="Producto7">
+                <img src="../fondo-productos/conjunto-corteiz.jpg" alt="Producto 7">
                 <p>Corteiz</p>
             </div>
             <div class="producto">
-                <img src="/fondo-productos/producto8.jpg" alt="Producto8">
+                <img src="../fondo-productos/tech-polo.jpg" alt="Producto 8">
+                <p>Tech-Polo</p>
+            </div>
+            <div class="producto">
+                <img src="../fondo-productos/nike-tech.jpg" alt="Producto 9">
+                <p>Nike-Tech</p>
+            </div>
+            <div class="producto">
+                <img src="../fondo-productos/nike-syna.jpg" alt="Producto 10">
                 <p>SynaWordl</p>
             </div>
             <div class="producto">
-                <img src="/fondo-productos/producto9.jpg" alt="Producto9">
-                <p>Nike Tech</p>
-            </div>
-            <div class="producto">
-                <img src="fondo-productos/productoN1.jpg" alt="Producto10">
-                <p>Conjunto</p>
-            </div>
-            <div class="producto">
-                <img src="/fondo-productos/productoN2.jpg" alt="Producto11">
-                <p>Bape Shark</p>
+                <img src="../fondo-productos/conjunto-nike.jpg" alt="Producto 11">
+                <p>Nike</p>
             </div>
         </div>
     </section>
