--- a/index.html
+++ b/index.html
@@ -18,47 +18,47 @@
         <h2>Productos</h2>
         <div class="contenedor-productos">
             <div class="producto">
-                <img src="../fondo-productos/bapesta.jpg" alt="Producto 1">
+                <img src="fondo-productos/bapesta.png" alt="Producto 1">
                 <p>Bapesta-Sta</p>
             </div>
             <div class="producto">
-                <img src="../fondo-productos/bape-shark.jpg" alt="Producto 2">
+                <img src="fondo-productos/bape-shark.png" alt="Producto 2">
                 <p>Bape-Shark</p>
             </div>
             <div class="producto">
-                <img src="../fondo-productos/bapeS.jpg" alt="Producto 3">
+                <img src="fondo-productos/bapeshark.png" alt="Producto 3">
                 <p>Bape-Shark</p>
             </div>
             <div class="producto">
-                <img src="../fondo-productos/hoddies-shark.jpg" alt="Producto 4">
+                <img src="fondo-productos/hoddies-shark.png" alt="Producto 4">
                 <p>Bape-Shark</p>
             </div>
             <div class="producto">
-                <img src="../fondo-productos/hoddie-tech.jpg" alt="Producto 5">
+                <img src="fondo-productos/hoddie-tech.png" alt="Producto 5">
                 <p>Hoddie-Tech</p>
             </div>
             <div class="producto">
-                <img src="../fondo-productos/camisa.corteiz.jpg" alt="Producto 6">
+                <img src="fondo-productos/camisa.corteiz.png" alt="Producto 6">
                 <p>Corteiz</p>
             </div>
             <div class="producto">
-                <img src="../fondo-productos/conjunto-corteiz.jpg" alt="Producto 7">
+                <img src="fondo-productos/conjunto-corteiz.png" alt="Producto 7">
                 <p>Corteiz</p>
             </div>
             <div class="producto">
-                <img src="../fondo-productos/tech-polo.jpg" alt="Producto 8">
+                <img src="fondo-productos/tech-polo.png" alt="Producto 8">
                 <p>Tech-Polo</p>
             </div>
             <div class="producto">
-                <img src="../fondo-productos/nike-tech.jpg" alt="Producto 9">
+                <img src="fondo-productos/nike-tech.png" alt="Producto 9">
                 <p>Nike-Tech</p>
             </div>
             <div class="producto">
-                <img src="../fondo-productos/nike-syna.jpg" alt="Producto 10">
+                <img src="fondo-productos/nike-syna.png" alt="Producto 10">
                 <p>SynaWordl</p>
             </div>
             <div class="producto">
-                <img src="../fondo-productos/conjunto-nike.jpg" alt="Producto 11">
+                <img src="fondo-productos/conjunto-nike.png" alt="Producto 11">
                 <p>Nike</p>
             </div>
         </div>
